--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -1,18 +1,16 @@
-$color-main: #ee2331;
-$color-secondary: #272f39;
-$color-nav: #535456;
-
+$color-main: #0ec79b;
+$color-text: #1a1e21;
 /* ------------------------------------------------ */
 
-$font-main: "Helvetica", "Open Sans", sans-serif;
-$font-secondary: "Venera", "Open Sans", sans-serif;
+$font-main: "Open Sans", sans-serif;
+$font-secondary: "Lato", sans-serif;
 
 /* ------------------------------------------------ */
 
 $mobile-width: "min-width: 576px";
 $tablet-width: "min-width: 768px";
-$desktop-width: "min-width: 992px";
-$big-desktop-width: "min-width: 1200px";
+$desktop-width: "min-width: 1200px";
+$big-desktop-width: "min-width: 1920px";
 
 /* ------------------------------------------------ */
 
