--- a/sass/block/header.scss
+++ b/sass/block/header.scss
@@ -1,4 +1,14 @@
-
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(255,255,255,0.35);
+  &__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
 @media ($mobile-width) {
 
 }
@@ -6,8 +16,22 @@
 
 }
 @media ($desktop-width) {
-
+  .header {
+    background-color: transparent;
+    &__wrapper {
+      width: 960px;
+      height: 80px;
+      margin-left: auto;
+      margin-right: auto;
+      align-items: center;
+    }
+  }
 }
 @media ($big-desktop-width) {
-
+  .header {
+    &__wrapper {
+      width: 1820px;
+      height: 90px;
+    }
+  }
 }
