--- a/sass/block/logo.scss
+++ b/sass/block/logo.scss
@@ -1,4 +1,24 @@
-
+.logo {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  img {
+    display: block;
+    width: 61px;
+    height: 22px;
+  }
+  p {
+    font-family: $font-secondary;
+    font-weight: 900;
+    color: #000;
+    text-transform: uppercase;
+    font-size: 16.63px;
+    line-height: 20px;
+    letter-spacing: 0.3em;
+    margin: 0;
+  }
+}
 @media ($mobile-width) {
 
 }
@@ -6,8 +26,29 @@
 
 }
 @media ($desktop-width) {
-
+  .logo {
+    margin-left: 0;
+    img {
+      width: 76px;
+      height: 28px;
+    }
+    p {
+      font-size: 20px;
+      line-height: 24px;
+      margin-left: 10px;
+    }
+  }
 }
 @media ($big-desktop-width) {
-
+  .logo {
+    img {
+      width: 87px;
+      height: 32px;
+    }
+    p {
+      font-size: 24px;
+      line-height: 29px;
+      margin-left: 10px;
+    }
+  }
 }
