--- a/sass/block/menu.scss
+++ b/sass/block/menu.scss
@@ -1,4 +1,45 @@
-
+.menu {
+  width: 100%;
+  visibility: hidden;
+  opacity: 0;
+  height: 0px;
+  transition-duration: 0.5s;
+  &.acive {
+    visibility: visible;
+    opacity: 1;
+  }
+  &__list {
+    @include reset-ul;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgba(255,255,255,0.9);
+  }
+  &__item {
+    margin-bottom: 15px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    a {
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: bold;
+      color: $color-text;
+      transition-duration: 0.1s;
+      &:hover {
+        border-bottom: 3px solid $color-main;
+      }
+    }
+  }
+  &__btn {
+    display: block;
+    width: 60px;
+    height: 60px;
+    border: 0;
+    background-color: rgba(255,255,255,0.8);
+    background-image: url('../img/icons/menu.svg');
+  }
+}
 @media ($mobile-width) {
 
 }
@@ -6,8 +47,42 @@
 
 }
 @media ($desktop-width) {
-
+  .menu {
+    visibility: visible;
+    opacity: 1;
+    width: auto;
+    height: auto;
+    &__list {
+      display: flex;
+      padding: 0;
+      background-color: transparent;
+    }
+    &__item {
+      margin: 0;
+      margin-right: 30px;
+      &:last-child {
+        margin-right: 0;
+      }
+      &.active {
+        a {
+          border-bottom: 3px solid $color-main;
+        }
+      }
+    }
+    &__btn {
+      display: none;
+    }
+  }
 }
 @media ($big-desktop-width) {
-
+  .menu {
+    &__item {
+      margin: 0;
+      margin-right: 80px;
+      a {
+        font-size: 20px;
+        line-height: 33px;
+      }
+    }
+  }
 }
