--- a/template/header.html
+++ b/template/header.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link href="css/style.min.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:900|Open+Sans:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
+
     <title>Title</title>
   </head>
   <body>
