--- a/sass/block/main.scss
+++ b/sass/block/main.scss
@@ -28,13 +28,17 @@
       url('../img/screen2_5t.png'),
       url('../img/screen2_6t.png'),
       /* screen 3 */
-      url('../img/screen_3t.png');
+      url('../img/screen_3t.png'),
+      /* screen 4 */
+      url('../img/screen4t.png');
 
     background-position: left 50px, 500px 50px, right 50px, right 50px,
       /* screen 2 */
       left 1103px, left 1357px, right 865px, 70px 856px, left 734px, right 1310px,
       /* screen 3 */
-      right 1610px;
+      right 1610px,
+      /* screen 4 */
+      left bottom;
   }
 }
 @media ($big-desktop-width) {
@@ -52,7 +56,11 @@
       url('../img/screen2_5.png'),
       url('../img/screen2_6.png'),
     /* screen 3 */
-      url('../img/screen_3.png');
+      url('../img/screen_3.png'),
+    /* screen 4 */
+      url('../img/screen4_2.png'),
+      url('../img/screen4_1.png');
+
 
 
 
@@ -60,6 +68,8 @@
     /* screen 2 */
       50px 1846px, left 1460px, right 746px, 169px 985px, left 987px, right 1570px,
     /* screen 2 */
-      right 1404px;
+      right 1404px,
+    /* screen 4 */
+      450px 2570px, left bottom;
   }
 }
