--- a/sass/block/menu.scss
+++ b/sass/block/menu.scss
@@ -4,7 +4,7 @@
   opacity: 0;
   height: 0px;
   transition-duration: 0.5s;
-  &.acive {
+  &.active {
     visibility: visible;
     opacity: 1;
   }
