--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,10 +12,6 @@
 
 /* ------------------------------------------------ */
 
-@import "global/fonts.scss";
-
-/* ------------------------------------------------ */
-
 @import "block/header.scss";
 @import "block/footer.scss";
 @import "block/btn.scss";
@@ -28,3 +24,4 @@
 @import "block/products.scss";
 @import "block/main.scss";
 @import "block/features.scss";
+@import "block/contact.scss";
