--- a/sass/block/header.scss
+++ b/sass/block/header.scss
@@ -1,8 +1,9 @@
 .header {
   position: fixed;
+  z-index: 9;
   top: 0;
   width: 100%;
-  background-color: rgba(255,255,255,0.35);
+  background-color: rgba(255,255,255,0.9);
   &__wrapper {
     display: flex;
     flex-wrap: wrap;
