--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -32,10 +32,27 @@ body {
   right: 0;
   bottom: 0;
   z-index: 100;
-  background-color: #000;
-  opacity: 0.8;
+  background-color: rgba(0, 0, 0, 0.8);
   cursor: pointer;
+  padding: 20px;
   &--open {
-    display: block;
+    display: flex;
   }
+}
+
+@media ($mobile-width) {
+
+}
+@media ($tablet-width) {
+
+}
+@media ($desktop-width) {
+  .overlay {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    align-items: center;
+  }
+}
+@media ($big-desktop-width) {
+
 }
