--- a/template/header.html
+++ b/template/header.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:900|Open+Sans:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
