--- a/sass/block/products.scss
+++ b/sass/block/products.scss
@@ -5,14 +5,6 @@
   &__wrapper {
     @include container;
   }
-  &__content {
-    cursor: pointer;
-    &:hover {
-      .products__item_title {
-        color: #ff3d01;
-      }
-    }
-  }
   &__title {
     font-size: 18px;
     line-height: 25px;
@@ -23,26 +15,68 @@
   }
   &__items {
     padding-top: 20px;
+    &_wrapper {
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
   &__item {
     background-color: rgba(255,255,255,0.8);
     padding: 15px;
     margin-bottom: 10px;
+    width: 100%;
+    cursor: pointer;
     &_img {
       width: 100px;
       height: 100px;
       display: block;
+      transition-duration: 0.3s;
     }
     &_descr {
       font-weight: 300;
       font-size: 14px;
       line-height: 23px;
-      color: $color-main;
-      opacity: 0.8;
+      color: $color-text;
+      opacity: 0.5;
       margin-bottom: 0;
     }
     &:last-child {
       margin-bottom: 0;
+    }
+    &:hover {
+      .products__item_title {
+        color: #ff3d01;
+      }
+      .products__item_img {
+        transform: scale(1.1);
+      }
+    }
+    &--1 {
+      order: 1;
+    }
+    &--2 {
+      order: 3;
+    }
+    &--3 {
+      order: 9;
+    }
+    &--4 {
+      order: 2;
+    }
+    &--5 {
+      order: 5;
+    }
+    &--6 {
+      order: 9;
+    }
+    &--7 {
+      order: 5;
+    }
+    &--8 {
+      order: 6;
+    }
+    &--9 {
+      order: 9;
     }
   }
   &__card {
@@ -341,6 +375,36 @@
       }
       &_descr {
         font-size: 16px;
+      }
+      &:last-child {
+        margin-bottom: 70px;
+      }
+      &--1 {
+        order: 1;
+      }
+      &--2 {
+        order: 2;
+      }
+      &--3 {
+        order: 3;
+      }
+      &--4 {
+        order: 4;
+      }
+      &--5 {
+        order: 5;
+      }
+      &--6 {
+        order: 6;
+      }
+      &--7 {
+        order: 7;
+      }
+      &--8 {
+        order: 8;
+      }
+      &--9 {
+        order: 9;
       }
     }
     &__card {
