--- a/template/footer.html
+++ b/template/footer.html
@@ -1,6 +1,7 @@
     <div class="overlay"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/scrollspy.js"></script>
     <script src="js/script.min.js"></script>
   </body>
 </html>
