--- a/template/footer.html
+++ b/template/footer.html
@@ -1,7 +1,65 @@
     <div class="overlay"></div>
+    <div class="form">
+      <h4 class="form__title">Request sample</h4>
+      <div role="form" class="wpcf7" id="wpcf7-f45-o2" lang="ru-RU" dir="ltr">
+        <div class="screen-reader-response"></div>
+        <form action="/#wpcf7-f45-o2" method="post" class="wpcf7-form" novalidate="novalidate">
+        <div class="form__row">
+        <label>First Name
+        <input type="text" name="first-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" id="first-name" aria-required="true" aria-invalid="false" placeholder="First Name">
+        </label>
+        <label>Last Name
+        <input type="text" name="last-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" id="last-name" aria-required="true" aria-invalid="false" placeholder="Last Name">
+        </label>
+        </div>
+        <div class="form__row">
+        <label>Email Address
+        <input type="email" name="email-address" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" id="email-address" aria-required="true" aria-invalid="false" placeholder="Email Address">
+        </label>
+        <label>Phone Number
+        <input type="tel" name="tel-number" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel" id="tel-number" aria-required="true" aria-invalid="false" placeholder="Phone Number">
+        </label>
+        </div>
+        <div class="form__row">
+        <label>Street
+        <input type="text" name="street" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" id="street" aria-required="true" aria-invalid="false" placeholder="Street">
+        </label>
+        <label>Copmany
+        <input type="text" name="copmany" value="" size="40" class="wpcf7-form-control wpcf7-text" id="copmany" aria-invalid="false" placeholder="Copmany">
+        </label>
+        </div>
+        <div class="form__row">
+        <label>Zip / Postal Code
+        <input type="text" name="postal" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" id="postal" aria-required="true" aria-invalid="false" placeholder="Zip or Postal Code">
+        </label>
+        <label>City
+        <input type="text" name="city" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" id="city" aria-required="true" aria-invalid="false" placeholder="City">
+        </label>
+        </div>
+        <div class="form__row">
+        <label>FedEx Account Number
+        <input type="text" name="fedex" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" id="fedex" aria-required="true" aria-invalid="false" placeholder="FedEx Account Number">
+        </label>
+        <label>Tax ID
+        <input type="text" name="taxid" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" id="taxid" aria-required="true" aria-invalid="false" placeholder="Tax ID">
+        </label>
+        </div>
+        <div class="form__row">
+        <label>Country
+        <select name="country" class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required" id="country" aria-required="true" aria-invalid="false"><option value="">---</option><option value="Belarus">Belarus</option><option value="USA">USA</option><option value="Germany">Germany</option></select>
+        </label>
+        </div>
+        <div class="form__row">
+        <label>Message
+        <textarea name="message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" id="message" aria-invalid="false"></textarea>
+        </label>
+        </div>
+        <p><input type="submit" value="Отправить" class="wpcf7-form-control wpcf7-submit"><span class="ajax-loader"></span></p>
+        <div class="wpcf7-response-output wpcf7-display-none"></div></form></div>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/scrollspy.js"></script>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
